--- a/src/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/src/pycam/Gui/gtk-interface/pycam-project.ui
@@ -6016,6 +6016,21 @@ Any selected group of dimensions will be scaled accordingly.</property>
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
+              <object class="GtkButton" id="LogWindowCopyToClipboard">
+                <property name="label">gtk-copy</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Copy the content of the log to the clipboard.</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkButton" id="LogWindowClear">
                 <property name="label">gtk-clear</property>
                 <property name="visible">True</property>
@@ -6026,7 +6041,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -6040,7 +6055,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
@@ -6053,6 +6068,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
       </object>
     </child>
     <action-widgets>
+      <action-widget response="0">LogWindowCopyToClipboard</action-widget>
       <action-widget response="0">LogWindowClear</action-widget>
       <action-widget response="0">LogWindowClose</action-widget>
     </action-widgets>
