added the "keyboard shortcuts" help link to the interface files
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@610 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/gtk-interface/pycam-project.ui
+++ b/share/gtk-interface/pycam-project.ui
@@ -6064,4 +6064,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
   <object class="GtkAdjustment" id="SupportGridPositionManualAdjustment">
     <property name="step_increment">1</property>
   </object>
+  <object class="GtkAction" id="HelpHotkeys">
+    <property name="label">_Keyboard Shortcuts</property>
+  </object>
 </interface>
