added the "WaterlineCutter" to the GUI
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@675 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/gtk-interface/pycam-project.ui
+++ b/share/gtk-interface/pycam-project.ui
@@ -2493,6 +2493,20 @@ It will spare some material close to the model (depending on the "step down" val
                                                     <property name="position">2</property>
                                                   </packing>
                                                 </child>
+                                                <child>
+                                                  <object class="GtkRadioButton" id="WaterlineCutter">
+                                                    <property name="label" translatable="yes">Waterlines</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">False</property>
+                                                    <property name="draw_indicator">True</property>
+                                                    <property name="group">DropCutter</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">3</property>
+                                                  </packing>
+                                                </child>
                                               </object>
                                             </child>
                                           </object>
